--- a/算法与数据结构学习.md
+++ b/算法与数据结构学习.md
@@ -25,3 +25,95 @@ N*logN
 设定左右指针L,R,R-L的差值不能大于L，最大的差值就是解
 
 big O(N)
+
+
+## 2、字符串排列
+一个数组中只存在‘G’ 和 ‘B’，
+
+想让左右的G都在左侧，所有的B都在右侧
+
+只能在相邻字符之间进行交换操作
+
+返回至少交换的次数
+
+### 1、贪心解法
+从左往右出现的第i个G只需要放在数组第i个位置(i=0,1,2,3,...)
+没有必要放在前一个G更前
+
+L指针发现的G 放在的地方
+index进行遍历
+
+index 位置的G交换到L的位置，交换的次数是index-L
+
+## 3、
+给定一个二维数组matrix
+
+可以从任意位置出发，走上下左右四个方向
+返回能走出来的最长递增链长度
+
+
+##4、
+给定一个数组arr,你可以决定每个数字之前添加+/-
+
+但是必须所有数字都参与
+
+在给定一个目标值target
+
+请问最后算出的target的方法是多少
+
+arr=[1,2,3,4,5] target = 3;
+
+用例：
++1 -2 +3 -4 +5 = 3
+计算不同的计算方法
+
+###1、暴力递归
+process(int [] arr,int index,int rest)
+
+可以自由使用arr[index...] 之后所有的数字，搞出rest这个数，方法是多少
+
+    baseCase:
+
+```
+if(index==arr.length){
+    return 0?1:0;
+}
+```
+
+递归表达式
+
+```process(arr,index+1,rest-arr[index])+process(arr,index+1,rest+arr[index])```
+
+###2、临时参数存储(记忆化搜索)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
