基础篇-阶乘累加

--- a/算法与数据结构学习.md
+++ b/算法与数据结构学习.md
@@ -86,6 +86,19 @@ if(index==arr.length){
 
 ###2、临时参数存储(记忆化搜索)
 
+###3、优化点
+1、可以转换成非负数组，方案数不会变
+
+2、target 大于数组累加和，答案为0
+
+3、累加和奇偶性不同，方法数为0
+
+4、所有取数的集合为P，所有取负数的集合为N(集合P,N中不带符号，那么一定有 
+`tatget=P-N`,两边同时加上 `P+N`,得到，`2*P = target+ P + N`
+故而 `P=(target+SUM)/2` 只要存在这样一个P，就是一个解决方案
+
+5、二维动态规划空间压缩技巧
+
 
 
 
